...
import UIKit

extension UIViewController {

	final func showError(title: String, message: String? = nil) {
		let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
		alert.addAction(UIAlertAction(title: "OK", style: .cancel, handler: nil))
		present(alert, animated: false, completion: nil)
	}
}

