//
//  RecordActivitiesUITests.swift
//  IntrospectiveUITests
//
//  Created by Bryan Nova on 12/1/18.
//  Copyright © 2018 Bryan Nova. All rights reserved.
//

import XCTest
import SwiftDate

final class RecordActivitiesUITests: UITest {

	final override func setUp() {
		super.setUp()
		app.tabBars.buttons["Record"].tap()
		app.tables.cells.staticTexts["Activities"].tap()
		skipInstructionsIfPresent()
	}

	// MARK: - ActivityDefinition

	func testAddNewActivityDefinition_usesTextFromSearchBarAsInitialName() {
		// given
		let activityName = "Watch TV"
		filterActivities(by: activityName)

		// when
		app.buttons["+"].tap()

		// then
		XCTAssertEqual(app.textFields["activity name"].value as? String, activityName)
	}

	func testCreatingActivityDefinition_showsNameAndDescriptionInActivityListAfterSave() {
		// given
		let definition = ActivityDefinition(name: "this is an activity", description: "this describes the activity")

		// when
		createActivityDefinition(definition)

		// then
		XCTAssert(app.tables.cells.staticTexts[definition.name].exists)
		XCTAssert(app.tables.cells.staticTexts[definition.description!].exists)
	}

	func testEditingActivityDefinition_correctlyPopulatesAllFields() {
		// given
		let definition = ActivityDefinition(
			name: "hfuewipq",
			autoNote: true,
			description: "fejhwioqp fewj qiop",
			tags: ["fhewui", "geqr", "hyrw"])
		createActivityDefinition(definition)

		// when
		// this is triggering the navigate back gesture all of the sudden
		app.tables.staticTexts[definition.name].gentleSwipe(.right)
		app.tables.buttons["✎ All"].tap()

		// then
		XCTAssertEqual(activityDefinitionNameField().value as? String, definition.name)
		XCTAssertEqual(app.textViews["activity description"].value as? String, definition.description)
		XCTAssertEqual(definitionTagsFieldAccessibilityValueAsSet(), Set(definition.tags!))
		XCTAssertEqual(activityDefinitionAutoNoteField().value as? String, "1")
	}

	func testDeletingDescriptionAndTagsFromActivityDefinition_correctlySaves() {
		// given
		let definition = ActivityDefinition(
			name: "hfuewipq",
			description: "fejhwioqp fewj qiop",
			tags: ["fhewui", "geqr", "hyrw"])
		createActivityDefinition(definition)

		// when
		app.tables.staticTexts[definition.name].gentleSwipe(.right)
		app.tables.buttons["✎ All"].tap()
		deleteContentOf(textField: app.textViews["activity description"])
		delete(numberOfTags: definition.tags!.count, fromTagsField: activityDefinitionTagsField())

		// then
		XCTAssertEqual(activityDefinitionNameField().value as? String, definition.name)
		XCTAssertEqual(app.textViews["activity description"].value as? String, "")
		XCTAssertEqual(activityDefinitionTagsField().value as? String, "Tags") // placeholder value is "Tags"
	}

	func testEditActivityDefinitionHasEmptyNameField_saveButtonIsDisabled() {
		// when
		app.buttons["+"].tap()

		// then
		XCTAssert(!app.buttons["Save"].isEnabled)
	}

	func testActivityDefinitionWithNameAlreadyExists_editActivityDefinitionScreenDisablesSaveButton() {
		// given
		let definition = ActivityDefinition(name: "greq")
		createActivityDefinition(definition)

		// when
		app.buttons["+"].tap()
		setTextFor(field: activityDefinitionNameField(), to: definition.name)

		// then
		XCTAssert(!app.buttons["Save"].isEnabled)
		app.navigationBars.buttons["Activities"].tap()
	}

	// MARK: - Activity

	func testTapOnActivityDefinition_startsActivity() {
		// given
		let definition = ActivityDefinition(name: "grneoq")
		createActivityDefinition(definition)

		// when
		app.tables.staticTexts[definition.name].tap()

		// then
		sleep(1)
		XCTAssertEqual(app.activityIndicators.allElementsBoundByIndex.count, 1)
	}

	func testTapOnActivityDefinitionThatHasRunningInstance_stopsRunningInstanceAndUpdatesLastInstanceInfo() {
		// given
		let definition = ActivityDefinition(name: "grnejioqu")
		createActivityDefinition(definition)
		app.tables.staticTexts[definition.name].tap()
		let startDate = Date()
		sleep(1)

		// when
		app.tables.staticTexts[definition.name].tap()
		let endDate = Date()

		// then
		sleep(1)
		XCTAssertEqual(app.activityIndicators.allElementsBoundByIndex.count, 0)
		XCTAssert(app.tables.cells.staticTexts[startToEndTimeLabelText(from: startDate, to: endDate)].exists)
		XCTAssertEqual(app.tables.cells.staticTexts["total duration for today"].value as? String, "0:00:01")
		XCTAssertEqual(app.tables.cells.staticTexts["most recent duration"].value as? String, "0:00:01")
	}

	func testChangingActivityDefinitionWhileEditingLastActivity_updatesUI() {
		// given
		let definition = ActivityDefinition(name: "fjhwi")
		createActivityDefinition(definition)
		let targetDefinition = ActivityDefinition(name: "greqnji" + definition.name)
		createActivityDefinition(targetDefinition)

		app.tables.staticTexts[definition.name].tap()
		app.tables.staticTexts[definition.name].swipeLeft()
		app.tables.buttons["✎ Last"].tap()

		// when
		app.tables.staticTexts["Activity"].tap()
		setPicker(to: targetDefinition.name, changeCase: false)
		app.buttons["save button"].tap()

		// then
		XCTAssert(app.tables.staticTexts[targetDefinition.name].exists)
	}

	func testClearingEndDateOnEditActivityScreen_updatesUI() {
		// given
		let definition = ActivityDefinition(name: "greq")
		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()
		sleep(1)
		app.tables.cells.staticTexts[definition.name].tap()
		let endDate = Date()
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.buttons["✎ Last"].tap()

		// when
		app.tables.cells.buttons["clear end date button"].tap()

		// then
		XCTAssert(!app.tables.cells.staticTexts[editActivityDateString(for: endDate)].exists)
	}

	func testChangingStartDateOnEditActivityScreen_updatesUI() {
		// given
		let definition = ActivityDefinition(name: "gteq")
		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()
		let expectedStartDate = (Date() - 1.days - 1.hours).dateBySet(hour: nil, min: nil, secs: 0)!
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.cells.buttons["✎ Last"].tap()

		// when
		app.tables.cells.staticTexts["Start"].tap()
		setDatePicker(to: expectedStartDate)
		app.buttons["save button"].tap()

		// then
		sleep(1) // table view has to reload data before UI is updated
		XCTAssertEqual(app.tables.cells.staticTexts["start date"].value as? String, editActivityDateString(for: expectedStartDate))
	}

	func testChangingEndDateOnEditActivityScreen_updatesUI() {
		// given
		let definition = ActivityDefinition(name: "gteq")
		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.cells.buttons["✎ Last"].tap()

		// when
		app.tables.cells.staticTexts["End"].tap()
		let expectedEndDate = (Date() - 1.days - 1.hours).dateBySet(hour: nil, min: nil, secs: 0)!
		setDatePicker(to: expectedEndDate)
		app.buttons["save button"].tap()

		// then
		sleep(1) // table view has to reload data before UI is updated
		XCTAssertEqual(app.tables.cells.staticTexts["end date"].value as? String, editActivityDateString(for: expectedEndDate))
	}

	func testEditingLastActivity_correctlyUpdatesCorrespondingActivityDefinitionCell() {
		// given
		let definition = ActivityDefinition(name: "gteq")
		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.cells.buttons["✎ Last"].tap()

		let startDate = (Date() - 1.minutes).dateBySet(hour: nil, min: nil, secs: 0)!
		setActivityStartDate(to: startDate)

		let endDate = startDate + 1.hours + 2.minutes
		setActivityEndDate(to: endDate)

		// when
		app.buttons["Save"].tap()

		// then
		sleep(1) // table view has to reload data before UI is updated
		XCTAssertEqual(app.activityIndicators.allElementsBoundByIndex.count, 0)
		XCTAssertEqual(app.tables.cells.staticTexts["last start / end time"].value as? String, startToEndTimeLabelText(from: startDate, to: endDate))
		XCTAssertEqual(app.tables.cells.staticTexts["total duration for today"].value as? String, "1:02:00")
		XCTAssertEqual(app.tables.cells.staticTexts["most recent duration"].value as? String, "1:02:00")
	}

	func testAddNewActivityScreen_startsWithCorrectActivityDefinitionSelected() {
		// given
		let definition1 = ActivityDefinition(name: "htgerq")
		createActivityDefinition(definition1)
		let definition2 = ActivityDefinition(name: "gheiqu")
		createActivityDefinition(definition2)

		// when
		app.tables.cells.staticTexts[definition2.name].swipeLeft()
		app.tables.cells.buttons["+"].tap()

		// then
		XCTAssert(app.tables.cells.staticTexts[definition2.name].exists)
	}

	func testAddNewActivityScreen_savesCorrectly() {
		// given
		let definition = ActivityDefinition(name: "htgerq")
		let expectedStartDate = (Date() - 1.days - 1.hours).dateBySet(hour: nil, min: nil, secs: 0)!
		let expectedEndDate = (Date() - 1.days).dateBySet(hour: nil, min: nil, secs: 0)!

		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.cells.buttons["+"].tap()

		setActivityStartDate(to: expectedStartDate)
		setActivityEndDate(to: expectedEndDate)

		let activityNote = "fehjorwiqj eior\nfjew\nfewq"
		setTextFor(field: app.tables.cells.textViews["activity note"], to: activityNote)

		let tags = ["c", "d", "e"]
		setTags(for: activityTagsField(), to: tags)

		// when
		app.buttons["Save"].tap()
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.buttons["✎ Last"].tap()

		// then
		XCTAssert(app.tables.cells.staticTexts[definition.name].exists)
		XCTAssertEqual(app.tables.cells.staticTexts["start date"].value as? String, editActivityDateString(for: expectedStartDate))
		XCTAssertEqual(app.tables.cells.staticTexts["end date"].value as? String, editActivityDateString(for: expectedEndDate))
		XCTAssertEqual(app.tables.cells.textViews["activity note"].value as? String, activityNote)
		XCTAssertEqual(activityTagsFieldAccessibilityValueAsSet(), Set(tags))
	}

	func testSavingChangesToExistingActivity_savesThoseChanges() {
		// given
		let definition = ActivityDefinition(name: "gteq")
		let expectedStartDate = (Date() - 1.days - 1.hours).dateBySet(hour: nil, min: nil, secs: 0)!
		let expectedEndDate = (Date() - 1.days).dateBySet(hour: nil, min: nil, secs: 0)!

		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.cells.buttons["✎ Last"].tap()

		setActivityStartDate(to: expectedStartDate)
		setActivityEndDate(to: expectedEndDate)

		let activityNote = "fehjorwiqj eior\nfjew\nfewq"
		setTextFor(field: app.tables.cells.textViews["activity note"], to: activityNote)

		let tags = ["c", "d", "e"]
		setTags(for: activityTagsField(), to: tags)

		// when
		app.buttons["Save"].tap()
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.cells.buttons["✎ Last"].tap()

		// then
		XCTAssert(app.tables.cells.staticTexts[definition.name].exists)
		XCTAssertEqual(app.tables.cells.staticTexts["start date"].value as? String, editActivityDateString(for: expectedStartDate))
		XCTAssertEqual(app.tables.cells.staticTexts["end date"].value as? String, editActivityDateString(for: expectedEndDate))
		XCTAssertEqual(app.tables.cells.textViews["activity note"].value as? String, activityNote)
		XCTAssertEqual(activityTagsFieldAccessibilityValueAsSet(), Set(tags))
	}

	func testSettingStartDateAfterEndDate_disablesSaveButtonOnEditActivityScreen() {
		// given
		let definition = ActivityDefinition(name: "gteqas")
		let startDate = Date() + 1.days

		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()
		sleep(1)
		app.tables.cells.staticTexts[definition.name].tap()
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.cells.buttons["✎ Last"].tap()

		// when
		setActivityStartDate(to: startDate)

		// then
		XCTAssert(!app.buttons["Save"].isEnabled)
	}

	func testSettingEndDateBeforeStartDate_disablesSaveButtonOnEditActivityScreen() {
		// given
		let definition = ActivityDefinition(name: "gteqas")
		let endDate = Date() - 1.days

		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()
		sleep(1)
		app.tables.cells.staticTexts[definition.name].tap()
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.cells.buttons["✎ Last"].tap()

		// when
		setActivityEndDate(to: endDate)

		// then
		XCTAssert(!app.buttons["Save"].isEnabled)
	}

	func testAutoIgnoreEnabledAndActivityStoppedBeforeMinimumTime_doesNotSaveActivity() {
		// given
		let definition = ActivityDefinition(name: "grehuiq")
		let minTime = 2
		createActivityDefinition(definition)
		app.tabBars.buttons["Settings"].tap()
		app.tables.cells.staticTexts["Activity"].tap()
		setAutoIgnore(enabled: true, seconds: String(minTime))
		app.navigationBars.buttons["Settings"].tap()
		app.tabBars.buttons["Record"].tap()

		// when
		app.tables.cells.staticTexts[definition.name].tap()
		sleep(UInt32(minTime) - 1)
		app.tables.cells.staticTexts[definition.name].tap()

		// then
		XCTAssertEqual(app.tables.cells.staticTexts["total duration for today"].value as? String, "")
	}

	func testAutoIgnoreEnabledAndActivityStoppedAfterMinimumTime_savesActivity() {
		// given
		let definition = ActivityDefinition(name: "grehuiq")
		let minTime = 1
		createActivityDefinition(definition)
		app.tabBars.buttons["Settings"].tap()
		app.tables.cells.staticTexts["Activity"].tap()
		setAutoIgnore(enabled: true, seconds: String(minTime))
		app.navigationBars.buttons["Settings"].tap()
		app.tabBars.buttons["Record"].tap()

		// when
		app.tables.cells.staticTexts[definition.name].tap()
		sleep(UInt32(minTime) + 1)
		app.tables.cells.staticTexts[definition.name].tap()

		// then
		var seconds = String(minTime + 1)
		if seconds.count == 1 {
			seconds = "0" + seconds
		}
		XCTAssertEqual(app.tables.cells.staticTexts["total duration for today"].value as? String, "0:00:" + seconds)
	}

	func testFinishingActivityWithAutoNoteEnabled_showsEditActivityScreen() {
		// given
		let definition = ActivityDefinition(name: "njgkort", autoNote: true)
		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()

		// when
		app.tables.cells.staticTexts[definition.name].tap()

		// then
		XCTAssert(app.tables.cells.textViews["activity note"].exists)
	}

	// MARK: - Quick Create / Start

	func testLongPressOnAddButtonWhenSearchBarIsEmpty_doesNotCreateActivity() {
		// when
		app.buttons["+"].press(forDuration: 1.0)

		// then
		XCTAssertEqual(app.cells.allElementsBoundByIndex.count, 0)
	}

	func testLongPressOnAddButtonWhenSearchBarHasNameOfExistingActiviyt_doesNotCreateActivityOrClearSearchBar() {
		// given
		let definition = ActivityDefinition(name: "freqgr")
		createActivityDefinition(definition)
		app.searchFields["Search Activities"].tap()
		app.searchFields["Search Activities"].typeText(definition.name)

		// when
		app.buttons["+"].press(forDuration: 1.0)
		app.buttons["OK"].tap() // dismiss error alert

		// then
		XCTAssertEqual(app.cells.allElementsBoundByIndex.count, 1)
		XCTAssertEqual(app.searchFields.allElementsBoundByIndex[0].value as? String, definition.name)
	}

	func testLongPressOnAddButtonWhenSearchBarIsNotEmpty_createsAndStartsActivity() {
		// given
		let definition = ActivityDefinition(name: "fhjdskaljk")
		app.searchFields["Search Activities"].tap()
		app.searchFields["Search Activities"].typeText(definition.name)

		// when
		app.buttons["+"].press(forDuration: 1.0)
		app.buttons["Cancel"].tap()

		// then
		XCTAssert(app.tables.cells.staticTexts[definition.name].exists)
		sleep(1)
		XCTAssertEqual(app.activityIndicators.allElementsBoundByIndex.count, 1)
	}

	// MARK: - Search Bar Filtering

	func testFilteringForNameWorks() {
		// given
		let definition1 = ActivityDefinition(name: "grnueio")
		let definition2 = ActivityDefinition(name: "htrw")
		createActivityDefinition(definition1)
		createActivityDefinition(definition2)

		// when
		app.searchFields["Search Activities"].tap()
		app.searchFields["Search Activities"].typeText(definition1.name)

		// then
		XCTAssertEqual(app.tables.cells.allElementsBoundByIndex.count, 1)
	}

	func testFilteringForDescriptionWorks() {
		// given
		let searchText = "abc"
		let definition = ActivityDefinition(name: "geqr", description: searchText + "gfjeiorq fj")
		let otherDefinition = ActivityDefinition(name: definition.name + "some other stuff")
		createActivityDefinition(definition)
		createActivityDefinition(otherDefinition)

		// when
		filterActivities(by: searchText)

		// then
		XCTAssertEqual(app.tables.cells.allElementsBoundByIndex.count, 1)
	}

	func testFilteringForTagsWorks() {
		// given
		let searchText = "grffjieorwq"
		let definition = ActivityDefinition(
			name: "gteqrwfd",
			tags: ["this tag " + searchText + " contains the search text"])
		let otherDefinition = ActivityDefinition(name: definition.name + "some other stuff")
		createActivityDefinition(definition)
		createActivityDefinition(otherDefinition)

		// when
		filterActivities(by: searchText)

		// then
		XCTAssertEqual(app.tables.cells.allElementsBoundByIndex.count, 1)
	}

	func testClearingFilterText_correctlyUpdatesDisplayedActivities() {
		// given
		let definition1 = ActivityDefinition(name: "grnueio")
		let definition2 = ActivityDefinition(name: "htrw")
		createActivityDefinition(definition1)
		createActivityDefinition(definition2)
		app.searchFields["Search Activities"].tap()
		app.searchFields["Search Activities"].typeText(definition1.name)

		// when
		app.searchFields["Search Activities"].buttons["Clear text"].tap()

		// then
		XCTAssertEqual(app.tables.cells.allElementsBoundByIndex.count, 2)
	}

	// MARK: - Deleting

	/// This test is flaky - run it a few times before believing a failure
	func testDeletingRunningActivity_correctlyUpdatesUI() {
		// given
		let definition = ActivityDefinition(name: "grenqj")
		createActivityDefinition(definition)
		app.tables.cells.staticTexts[definition.name].tap()

		// when
		app.tables.cells.staticTexts[definition.name].swipeLeft()
		app.tables.buttons["🗑️ Last"].tap()
		app.buttons["Yes"].tap()

		// then
		sleep(2)
		XCTAssertEqual(app.activityIndicators.allElementsBoundByIndex.count, 0)
		XCTAssertEqual(app.tables.cells.staticTexts["last start / end time"].value as? String, "")
		XCTAssertEqual(app.tables.cells.staticTexts["total duration for today"].value as? String, "")
		XCTAssertEqual(app.tables.cells.staticTexts["most recent duration"].value as? String, "")
	}

	func testDeleteActivityDefinitionWhileNotFiltering_removesCorrectRowFromActivityList() {
		// given
		let definition1 = ActivityDefinition(name: "geq")
		let definition2 = ActivityDefinition(name: "tqe")
		let definition3 = ActivityDefinition(name: "ghrjeq")
		createActivityDefinition(definition1)
		createActivityDefinition(definition2)
		createActivityDefinition(definition3)

		// when
		app.tables.cells.staticTexts[definition2.name].gentleSwipe(.right)
		app.tables.buttons["🗑️ All"].tap()
		app.buttons["Yes"].tap()

		// then
		XCTAssertEqual(app.tables.cells.allElementsBoundByIndex.count, 2)
		XCTAssert(app.tables.cells.staticTexts[definition1.name].exists)
		XCTAssert(!app.tables.cells.staticTexts[definition2.name].exists)
		XCTAssert(app.tables.cells.staticTexts[definition3.name].exists)
	}

	func testDeletingActivityDefinitionWhileFiltering_removesCorrectRowFromActivityList() {
		// given
		let definition1 = ActivityDefinition(name: "doesn't contain filter string")
		let definition2 = ActivityDefinition(name: "z")
		let definition3 = ActivityDefinition(name: "zz")
		let definition4 = ActivityDefinition(name: "zzz")
		createActivityDefinition(definition1)
		createActivityDefinition(definition2)
		createActivityDefinition(definition3)
		createActivityDefinition(definition4)
		filterActivities(by: "z")

		// when
		app.tables.cells.staticTexts[definition3.name].gentleSwipe(.right)
		app.tables.buttons["🗑️ All"].tap()
		app.buttons["Yes"].tap()
		app.buttons["Cancel"].tap() // clear search text

		// then
		XCTAssertEqual(app.tables.cells.allElementsBoundByIndex.count, 3)
		XCTAssert(app.tables.cells.staticTexts[definition1.name].exists)
		XCTAssert(app.tables.cells.staticTexts[definition2.name].exists)
		XCTAssert(!app.tables.cells.staticTexts[definition3.name].exists)
		XCTAssert(app.tables.cells.staticTexts[definition4.name].exists)
	}

	// MARK: - Reordering ActivityDefinitions

	func testReorderToLowerSpotWhileFiltering_correcltyReordersDefinitions() {
		// given
		let filterString = "filter string"
		let definition1 = ActivityDefinition(name: filterString)
		let definition2 = ActivityDefinition(name: "definition 2")
		let definition3 = ActivityDefinition(name: "\(filterString) definition 3")
		let definition4 = ActivityDefinition(name: "definition 4 \(filterString)")
		createActivityDefinition(definition1)
		createActivityDefinition(definition2)
		createActivityDefinition(definition3)
		createActivityDefinition(definition4)
		filterActivities(by: filterString)

		// when
		definitionCell(definition1).press(forDuration: 0.5, thenDragTo: definitionCell(definition4))
		app.buttons["Cancel"].tap()

		// then
		XCTAssertLessThanOrEqual(definitionCell(definition2).frame.maxY, definitionCell(definition3).frame.minY)
		XCTAssertLessThanOrEqual(definitionCell(definition3).frame.maxY, definitionCell(definition4).frame.minY)
		XCTAssertLessThanOrEqual(definitionCell(definition4).frame.maxY, definitionCell(definition1).frame.minY)
	}

	func testReorderToHigherSpotWhileFiltering_correcltyReordersDefinitions() {
		// given
		let filterString = "filter string"
		let definition1 = ActivityDefinition(name: filterString)
		let definition2 = ActivityDefinition(name: "definition 2")
		let definition3 = ActivityDefinition(name: "\(filterString) definition 3")
		let definition4 = ActivityDefinition(name: "definition 4 \(filterString)")
		createActivityDefinition(definition1)
		createActivityDefinition(definition2)
		createActivityDefinition(definition3)
		createActivityDefinition(definition4)
		filterActivities(by: filterString)

		// when
		definitionCell(definition3).press(forDuration: 0.5, thenDragTo: definitionCell(definition1))
		app.buttons["Cancel"].tap()

		// then
		XCTAssertLessThanOrEqual(definitionCell(definition3).frame.maxY, definitionCell(definition1).frame.minY)
		XCTAssertLessThanOrEqual(definitionCell(definition1).frame.maxY, definitionCell(definition2).frame.minY)
		XCTAssertLessThanOrEqual(definitionCell(definition2).frame.maxY, definitionCell(definition4).frame.minY)
	}

	func testReorderToLowerSpotWhileNotFiltering_persistsAfterGoingBackAndThenViewingRecordActivitiesScreenAgain() {
		// given
		let definition1 = ActivityDefinition(name: "definition 1")
		let definition2 = ActivityDefinition(name: "definition 2")
		let definition3 = ActivityDefinition(name: "definition 3")
		createActivityDefinition(definition1)
		createActivityDefinition(definition2)
		createActivityDefinition(definition3)

		// when - re-order
		definitionCell(definition1).press(forDuration: 0.5, thenDragTo: definitionCell(definition2))

		// then - correct order before
		XCTAssertLessThanOrEqual(definitionCell(definition2).frame.maxY, definitionCell(definition1).frame.minY)
		XCTAssertLessThanOrEqual(definitionCell(definition1).frame.maxY, definitionCell(definition3).frame.minY)

		// when - go back to record screen and then view activities again
		app.navigationBars.buttons["Back"].tap()
		app.tables.cells.staticTexts["Activities"].tap()

		// then - correct order after
		XCTAssertLessThanOrEqual(definitionCell(definition2).frame.maxY, definitionCell(definition1).frame.minY)
		XCTAssertLessThanOrEqual(definitionCell(definition1).frame.maxY, definitionCell(definition3).frame.minY)
	}

